--- a/LLM detect ai generated text/lstm_bid_SMOTE_models.ipynb
+++ b/LLM detect ai generated text/lstm_bid_SMOTE_models.ipynb
@@ -403,6 +403,82 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-01-08 15:17:18,631 SequenceTagger predicts: Dictionary with 20 tags: <unk>, O, S-ORG, S-MISC, B-PER, E-PER, S-LOC, B-ORG, E-ORG, I-PER, S-PER, B-MISC, I-MISC, E-MISC, I-ORG, B-LOC, E-LOC, I-LOC, <START>, <STOP>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from flair.data import Sentence\n",
+    "from flair.models import SequenceTagger\n",
+    "\n",
+    "# load tagger\n",
+    "tagger = SequenceTagger.load(\"flair/ner-english\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed texts: 50\n",
+      "{'Robert Duffer', 'Andrew Selsky', 'Henry Ford', 'Elizabeth Rosenthal'}\n",
+      "Processed texts: 100\n",
+      "{'Robert Duffer', 'Andrew Selsky', 'Henry Ford', 'Elizabeth Rosenthal'}\n",
+      "Processed texts: 150\n",
+      "{'Robert Duffer', 'Andrew Selsky', 'Henry Ford', 'Elizabeth Rosenthal'}\n",
+      "Processed texts: 200\n",
+      "{'Robert Duffer', 'Andrew Selsky', 'Henry Ford', 'Elizabeth Rosenthal'}\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[161], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m sentence \u001b[38;5;241m=\u001b[39m Sentence(data_train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# predict NER tags\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m \u001b[43mtagger\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43msentence\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# iterate over entities and print\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m entity \u001b[38;5;129;01min\u001b[39;00m sentence\u001b[38;5;241m.\u001b[39mget_spans(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mner\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
+      "File \u001b[1;32mc:\\Users\\33610\\Python Projects\\Kaggle\\.venv\\lib\\site-packages\\flair\\models\\sequence_tagger_model.py:506\u001b[0m, in \u001b[0;36mSequenceTagger.predict\u001b[1;34m(self, sentences, mini_batch_size, return_probabilities_for_all_classes, verbose, label_name, return_loss, embedding_storage_mode, force_token_predictions)\u001b[0m\n\u001b[0;32m    504\u001b[0m \u001b[38;5;66;03m# make predictions\u001b[39;00m\n\u001b[0;32m    505\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39muse_crf:\n\u001b[1;32m--> 506\u001b[0m     predictions, all_tags \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mviterbi_decoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    507\u001b[0m \u001b[43m        \u001b[49m\u001b[43mfeatures\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreturn_probabilities_for_all_classes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch\u001b[49m\n\u001b[0;32m    508\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    509\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    510\u001b[0m     predictions, all_tags \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_standard_inference(\n\u001b[0;32m    511\u001b[0m         features, batch, return_probabilities_for_all_classes\n\u001b[0;32m    512\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\33610\\Python Projects\\Kaggle\\.venv\\lib\\site-packages\\flair\\models\\sequence_tagger_utils\\viterbi.py:198\u001b[0m, in \u001b[0;36mViterbiDecoder.decode\u001b[1;34m(self, features_tuple, probabilities_for_all_classes, sentences)\u001b[0m\n\u001b[0;32m    195\u001b[0m pointer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mones((batch_size, \u001b[38;5;241m1\u001b[39m), dtype\u001b[38;5;241m=\u001b[39mtorch\u001b[38;5;241m.\u001b[39mlong, device\u001b[38;5;241m=\u001b[39mflair\u001b[38;5;241m.\u001b[39mdevice) \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstop_tag\n\u001b[0;32m    197\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m t \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mreversed\u001b[39m(\u001b[38;5;28mrange\u001b[39m(backpointers\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m1\u001b[39m)))):\n\u001b[1;32m--> 198\u001b[0m     decoded[:, t] \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgather\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbackpointers\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpointer\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39msqueeze(\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m    199\u001b[0m     pointer \u001b[38;5;241m=\u001b[39m decoded[:, t]\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m    201\u001b[0m \u001b[38;5;66;03m# Sanity check\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "# init result\n",
+    "res = []\n",
+    "\n",
+    "# make sentence\n",
+    "for i, sentence in enumerate(data_train['text']):\n",
+    "    sentence = Sentence(data_train['text'][0])\n",
+    "\n",
+    "    # predict NER tags\n",
+    "    tagger.predict(sentence)\n",
+    "\n",
+    "    # iterate over entities and print\n",
+    "    for entity in sentence.get_spans('ner'):\n",
+    "        if entity.tag == 'PER':\n",
+    "            res.append(entity.text)\n",
+    "\n",
+    "    if i % 50 == 0 and i>0:\n",
+    "        print(f\"Processed texts: {i}\")\n",
+    "        print(set(res))\n",
+    "        res = []"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -430,6 +506,161 @@
    ],
    "source": [
     "preprocess_text(data_train['text'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>prompt_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>generated</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0059830c</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cars. Cars have been around since they became ...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>005db917</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Transportation is a large necessity in most co...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>008f63e3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>\"America's love affair with it's vehicles seem...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00940276</td>\n",
+       "      <td>0</td>\n",
+       "      <td>How often do you ride in a car? Do you drive a...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00c39458</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cars are a wonderful thing. They are perhaps o...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1373</th>\n",
+       "      <td>fe6ff9a5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>There has been a fuss about the Elector Colleg...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1374</th>\n",
+       "      <td>ff669174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Limiting car usage has many advantages. Such a...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1375</th>\n",
+       "      <td>ffa247e0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>There's a new trend that has been developing f...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1376</th>\n",
+       "      <td>ffc237e9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>As we all know cars are a big part of our soci...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1377</th>\n",
+       "      <td>ffe1ca0d</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Cars have been around since the 1800's and hav...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1378 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            id  prompt_id                                               text  \\\n",
+       "0     0059830c          0  Cars. Cars have been around since they became ...   \n",
+       "1     005db917          0  Transportation is a large necessity in most co...   \n",
+       "2     008f63e3          0  \"America's love affair with it's vehicles seem...   \n",
+       "3     00940276          0  How often do you ride in a car? Do you drive a...   \n",
+       "4     00c39458          0  Cars are a wonderful thing. They are perhaps o...   \n",
+       "...        ...        ...                                                ...   \n",
+       "1373  fe6ff9a5          1  There has been a fuss about the Elector Colleg...   \n",
+       "1374  ff669174          0  Limiting car usage has many advantages. Such a...   \n",
+       "1375  ffa247e0          0  There's a new trend that has been developing f...   \n",
+       "1376  ffc237e9          0  As we all know cars are a big part of our soci...   \n",
+       "1377  ffe1ca0d          0  Cars have been around since the 1800's and hav...   \n",
+       "\n",
+       "      generated  \n",
+       "0             0  \n",
+       "1             0  \n",
+       "2             0  \n",
+       "3             0  \n",
+       "4             0  \n",
+       "...         ...  \n",
+       "1373          0  \n",
+       "1374          0  \n",
+       "1375          0  \n",
+       "1376          0  \n",
+       "1377          0  \n",
+       "\n",
+       "[1378 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Detect names in the text\n",
+    "data_train['names'] = data_train['text'].apply(get_names)"
    ]
   },
   {
