--- a/Bank Churn/bank_churn.ipynb
+++ b/Bank Churn/bank_churn.ipynb
@@ -16,13 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from random import sample\n",
     "import zipfile\n",
     "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "zip_file = zipfile.ZipFile('playground-series-s4e1.zip')\n",
     "train_data = zip_file.open('train.csv')\n",
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +181,7 @@
        "4         1.0             1.0         15068.83       0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +328,6 @@
    "source": [
     "# Make lgistic regression model\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Make dummy data for Geography and Gender columns\n",
     "train_df = pd.get_dummies(train_df, columns=['Geography', 'Gender'], drop_first=True)\n",
@@ -438,14 +438,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.224026   0.05735966 0.08597803 ... 0.54180547 0.09121549 0.3650546 ]\n"
+     "ename": "NameError",
+     "evalue": "name 'LogisticRegression' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 27\u001b[0m\n\u001b[0;32m     24\u001b[0m X_train, X_test, y_train, y_test \u001b[38;5;241m=\u001b[39m train_test_split(X, y, test_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.2\u001b[39m)\n\u001b[0;32m     26\u001b[0m \u001b[38;5;66;03m# Fit the model\u001b[39;00m\n\u001b[1;32m---> 27\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mLogisticRegression\u001b[49m()\n\u001b[0;32m     28\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m     30\u001b[0m \u001b[38;5;66;03m# Get probabilities\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'LogisticRegression' is not defined"
      ]
     }
    ],
@@ -577,6 +581,206 @@
    "source": [
     "# export to csv\n",
     "predictions_df.to_csv('predictions.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'roc_auc_score' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 23\u001b[0m\n\u001b[0;32m     20\u001b[0m predictions \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(X_test)\n\u001b[0;32m     22\u001b[0m \u001b[38;5;66;03m# Evaluate the model using AUROC\u001b[39;00m\n\u001b[1;32m---> 23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAUROC score: \u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[43mroc_auc_score\u001b[49m(y_test, predictions))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'roc_auc_score' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Build a random forest classifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Make a copy of the data\n",
+    "train_df_rf = train_df.copy()\n",
+    "test_df_rf = test_df.copy()\n",
+    "\n",
+    "# Split the data into train and test\n",
+    "X = train_df_rf.drop('Exited', axis=1)\n",
+    "y = train_df_rf['Exited']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# Fit the model\n",
+    "model = RandomForestClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "predictions = model.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUROC score:  0.7367527077955756\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "# Evaluate the model using AUROC\n",
+    "print('AUROC score: ', roc_auc_score(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrain the model on all the data\n",
+    "model = RandomForestClassifier()\n",
+    "model.fit(X, y)\n",
+    "\n",
+    "# Get probabilities on the test data\n",
+    "probabilities = model.predict_proba(test_df)\n",
+    "\n",
+    "# make into pandas df\n",
+    "probabilities_df = pd.DataFrame(probabilities[:, 1], index=test_df.index, columns=['Exited'])\n",
+    "\n",
+    "# export to csv\n",
+    "probabilities_df.to_csv('predictions_rf.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110023"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(probabilities_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- graduent boosting\n",
+    "- svm\n",
+    "- nn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gradient Boosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUROC: 0.89\n"
+     ]
+    }
+   ],
+   "source": [
+    "import xgboost as xgb\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Assuming that your data is in a DataFrame called df, and your target variable is 'Exited'\n",
+    "X = train_df.drop('Exited', axis=1)\n",
+    "y = train_df['Exited']\n",
+    "\n",
+    "# Split the data into training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Create a DMatrix for more efficiency\n",
+    "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
+    "dtest = xgb.DMatrix(X_test, label=y_test)\n",
+    "\n",
+    "# Define the parameters\n",
+    "param = {\n",
+    "    'max_depth': 3,  # maximum depth of each tree\n",
+    "    'eta': 0.3,  # learning rate\n",
+    "    'objective': 'binary:logistic',  # binary classification\n",
+    "    'nthread': 4,  # number of CPU threads to use\n",
+    "    'eval_metric': 'auc'  # evaluation metric\n",
+    "}\n",
+    "num_round = 20  # number of boosting rounds\n",
+    "\n",
+    "# Train the model\n",
+    "bst = xgb.train(param, dtrain, num_round)\n",
+    "\n",
+    "# Make predictions\n",
+    "preds_proba = bst.predict(dtest)\n",
+    "preds_binary = [1 if pred > 0.5 else 0 for pred in preds_proba]\n",
+    "\n",
+    "# Evaluate the model\n",
+    "auroc = roc_auc_score(y_test, preds_proba)\n",
+    "print(\"AUROC: %.2f\" % auroc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# retrain the model with all the data\n",
+    "dtrain = xgb.DMatrix(X, label=y)\n",
+    "bst = xgb.train(param, dtrain, num_round)\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "dtest = xgb.DMatrix(test_df)\n",
+    "preds_proba = bst.predict(dtest)\n",
+    "\n",
+    "# make preds proba into df and export to csv\n",
+    "preds_proba_df = pd.DataFrame(preds_proba, index=test_df.index, columns=['Exited'])\n",
+    "preds_proba_df.to_csv('predictions_xgb.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVM"
    ]
   }
  ],
